# ccpm_test3

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-checks.yml
ccpm/: app.py  config.py
ccpm/domain/entities/: project.py  task.py  time_record.py
ccpm/domain/repositories/: project_repository.py  task_repository.py  time_repository.py
ccpm/domain/services/: buffer_calculation.py  critical_chain.py
ccpm/domain/value_objects/: buffer_status.py
ccpm/presentation/pages/: dashboard.py
doc/: requirements_specification.md
doc/specification_documents/: api_specification.md  architecture.md  datamodel.md  implementation_plan.md  interface.md  test_plan.md
tests/: conftest.py  test_basic.py
